--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ h1 {
 
 #game > div {
   border: 1px solid black;
-  width: 200px;
-  height: 200px;
+  width: 175px;
+  height: 175px;
   margin: 5px;
   display: inline-block;
   opacity: 0;
@@ -38,7 +38,8 @@ h1 {
 }
 
 #play {
-  width: 25vw;
-  height: 8vh;
+  width: 200px;
+  height: 50px;
   font-size: 1.5rem;
+  margin-bottom: 50px;
 }
